kubernetes/app/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: joy
  name: api-auth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-auth
  template:
    metadata:
      labels:
        app: api-auth
    spec:
      containers:
        - name: api-auth
          image: registry.infra.kagescan.fr/s9-cloud-auth:v0.2
          ports:
            - containerPort: 8000
          lifecycle:
            postStart:
              exec:
                command: [ "sh", "-c", "python manage.py makemigrations core_models && python manage.py migrate core_models" ]


---

apiVersion: v1
kind: Service
metadata:
  namespace: joy
  name: auth-service
spec:
  type: LoadBalancer
  selector:
    app: api-auth
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
