kubernetes/app/authenticated.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - name: django-app
          image: yasmineaz/cloudintegration:v22
          ports:
            - containerPort: 8000 
          lifecycle:
            postStart:
              exec:
                command: [ "python", "manage.py", "migrate" ]

---

apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  type: LoadBalancer
  selector:
    app: django-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
