kubernetes/app/front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: landing-app
  template:
    metadata:
      labels:
        app: landing-app
    spec:
      containers:
        - name: landing-app
          image: registry.infra.kagescan.fr/s9-cloud-landing:latest
          ports:
            - containerPort: 8001

---

apiVersion: v1
kind: Service
metadata:
  name: landing-srv
spec:
  type: LoadBalancer
  selector:
    app: landing-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
