kubernetes/app/profile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: joy
  name: api-profile
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-profile
  template:
    metadata:
      labels:
        app: api-profile
    spec:
      containers:
        - name: api-auth
          image: registry.infra.kagescan.fr/s9-cloud-profile:v1.0
          ports:
            - containerPort: 8002
---

apiVersion: v1
kind: Service
metadata:
  namespace: joy
  name: profile-service
spec:
  type: LoadBalancer
  selector:
    app: api-profile
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8002
