kubernetes/app/publication.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: joy
  name: api-publication
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-publication
  template:
    metadata:
      labels:
        app: api-publication
    spec:
      containers:
        - name: api-publication
          image: registry.infra.kagescan.fr/s9-cloud-publication:v1.0
          ports:
            - containerPort: 8001
          lifecycle:
            postStart:
              exec:
                command: [ "sh", "-c", "python manage.py makemigrations publication && python manage.py migrate publication" ]


---

apiVersion: v1
kind: Service
metadata:
  name: publication-service
  namespace: joy
spec:
  type: LoadBalancer
  selector:
    app: api-publication
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
